Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EXIT
    LEFT
    MOVE
    RIGHT
    SUM
    WALL

Grammar

Rule 0     S' -> program
Rule 1     program -> sentence_list
Rule 2     sentence_list -> sentence_list single_sentence
Rule 3     sentence_list -> single_sentence
Rule 4     single_sentence -> declaration NEW_LINE
Rule 5     single_sentence -> assignment NEW_LINE
Rule 6     single_sentence -> if NEW_LINE
Rule 7     single_sentence -> for NEW_LINE
Rule 8     single_sentence -> function NEW_LINE
Rule 9     declaration -> type VARIABLE EQUAL expression
Rule 10    declaration -> type VARIABLE EQUAL LEFT_FIGURE_BRACKET list_args RIGHT_FIGURE_BRACKET
Rule 11    assignment -> variable ASSIGN expression
Rule 12    expression -> math_expression
Rule 13    expression -> variable
Rule 14    expression -> constant
Rule 15    math_expression -> expression PLUS expression
Rule 16    math_expression -> expression MINUS expression
Rule 17    math_expression -> expression MATRIX_MUL expression
Rule 18    math_expression -> expression ELEMENTAL_MUL expression
Rule 19    math_expression -> expression LEFT_CYCLIC_SHIFT
Rule 20    math_expression -> expression RIGHT_CYCLIC_SHIFT
Rule 21    math_expression -> expression TRANSPOSITION
Rule 22    math_expression -> expression LESS expression
Rule 23    math_expression -> expression GREATER expression
Rule 24    math_expression -> NEGATIVE expression
Rule 25    math_expression -> expression AND expression
Rule 26    variable -> VARIABLE
Rule 27    type -> int
Rule 28    type -> bool
Rule 29    int -> INT
Rule 30    int -> CVINT
Rule 31    int -> VINT
Rule 32    int -> CMINT
Rule 33    int -> MINT
Rule 34    int -> CINT
Rule 35    bool -> BOOL
Rule 36    bool -> CMBOOL
Rule 37    bool -> MBOOL
Rule 38    bool -> CVBOOL
Rule 39    bool -> VBOOL
Rule 40    bool -> CBOOL
Rule 41    constant -> INT_BINARY
Rule 42    constant -> INT_DECIMAL
Rule 43    constant -> TRUE
Rule 44    constant -> FALSE
Rule 45    list_args -> LEFT_FIGURE_BRACKET list_expressions RIGHT_FIGURE_BRACKET
Rule 46    list_args -> list_args COMMA LEFT_FIGURE_BRACKET list_args RIGHT_FIGURE_BRACKET
Rule 47    list_args -> list_expressions
Rule 48    list_expressions -> list_expressions COMMA expression
Rule 49    list_expressions -> expression
Rule 50    if -> IF expression BEGINIF NEW_LINE sentence_list ENDIF
Rule 51    for -> FOR VARIABLE EQUAL expression DOUBLE_DOT expression BEGINFOR NEW_LINE sentence_list ENDFOR
Rule 52    function -> return_spec FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
Rule 53    function -> return_spec FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
Rule 54    function -> FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
Rule 55    function -> FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
Rule 56    return_spec -> return_spec COMMA type VARIABLE
Rule 57    return_spec -> type VARIABLE EQUAL
Rule 58    parameters -> parameters COMMA parameter
Rule 59    parameters -> parameter
Rule 60    parameter -> type VARIABLE
Rule 61    parameter -> type VARIABLE EQUAL list_args
Rule 62    parameter -> type VARIABLE EQUAL LEFT_FIGURE_BRACKET list_args RIGHT_FIGURE_BRACKET

Terminals, with rules where they appear

AND                  : 25
ASSIGN               : 11
BEGIN                : 52 53 54 55
BEGINFOR             : 51
BEGINIF              : 50
BOOL                 : 35
CBOOL                : 40
CINT                 : 34
CMBOOL               : 36
CMINT                : 32
COMMA                : 46 48 56 58
CVBOOL               : 38
CVINT                : 30
DOUBLE_DOT           : 51
ELEMENTAL_MUL        : 18
END                  : 52 53 54 55
ENDFOR               : 51
ENDIF                : 50
EQUAL                : 9 10 51 57 61 62
EXIT                 : 
FALSE                : 44
FOR                  : 51
FUNCTION             : 52 53 54 55
GREATER              : 23
IF                   : 50
INT                  : 29
INT_BINARY           : 41
INT_DECIMAL          : 42
LEFT                 : 
LEFT_BRACKET         : 52 53 54 55
LEFT_CYCLIC_SHIFT    : 19
LEFT_FIGURE_BRACKET  : 10 45 46 62
LESS                 : 22
MATRIX_MUL           : 17
MBOOL                : 37
MINT                 : 33
MINUS                : 16
MOVE                 : 
NEGATIVE             : 24
NEW_LINE             : 4 5 6 7 8 50 51 52 53 54 55
PLUS                 : 15
RIGHT                : 
RIGHT_BRACKET        : 52 53 54 55
RIGHT_CYCLIC_SHIFT   : 20
RIGHT_FIGURE_BRACKET : 10 45 46 62
SUM                  : 
TRANSPOSITION        : 21
TRUE                 : 43
VARIABLE             : 9 10 26 51 52 53 54 55 56 57 60 61 62
VBOOL                : 39
VINT                 : 31
WALL                 : 
error                : 

Nonterminals, with rules where they appear

assignment           : 5
bool                 : 28
constant             : 14
declaration          : 4
expression           : 9 11 15 15 16 16 17 17 18 18 19 20 21 22 22 23 23 24 25 25 48 49 50 51 51
for                  : 7
function             : 8
if                   : 6
int                  : 27
list_args            : 10 46 46 61 62
list_expressions     : 45 47 48
math_expression      : 12
parameter            : 58 59
parameters           : 52 54 58
program              : 0
return_spec          : 52 53 56
sentence_list        : 1 2 50 51 52 53 54 55
single_sentence      : 2 3
type                 : 9 10 56 57 60 61 62
variable             : 11 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sentence_list
    (2) sentence_list -> . sentence_list single_sentence
    (3) sentence_list -> . single_sentence
    (4) single_sentence -> . declaration NEW_LINE
    (5) single_sentence -> . assignment NEW_LINE
    (6) single_sentence -> . if NEW_LINE
    (7) single_sentence -> . for NEW_LINE
    (8) single_sentence -> . function NEW_LINE
    (9) declaration -> . type VARIABLE EQUAL expression
    (10) declaration -> . type VARIABLE EQUAL LEFT_FIGURE_BRACKET list_args RIGHT_FIGURE_BRACKET
    (11) assignment -> . variable ASSIGN expression
    (50) if -> . IF expression BEGINIF NEW_LINE sentence_list ENDIF
    (51) for -> . FOR VARIABLE EQUAL expression DOUBLE_DOT expression BEGINFOR NEW_LINE sentence_list ENDFOR
    (52) function -> . return_spec FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (53) function -> . return_spec FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (54) function -> . FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (55) function -> . FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (27) type -> . int
    (28) type -> . bool
    (26) variable -> . VARIABLE
    (56) return_spec -> . return_spec COMMA type VARIABLE
    (57) return_spec -> . type VARIABLE EQUAL
    (29) int -> . INT
    (30) int -> . CVINT
    (31) int -> . VINT
    (32) int -> . CMINT
    (33) int -> . MINT
    (34) int -> . CINT
    (35) bool -> . BOOL
    (36) bool -> . CMBOOL
    (37) bool -> . MBOOL
    (38) bool -> . CVBOOL
    (39) bool -> . VBOOL
    (40) bool -> . CBOOL

    IF              shift and go to state 12
    FOR             shift and go to state 13
    FUNCTION        shift and go to state 15
    VARIABLE        shift and go to state 10
    INT             shift and go to state 18
    CVINT           shift and go to state 19
    VINT            shift and go to state 20
    CMINT           shift and go to state 21
    MINT            shift and go to state 22
    CINT            shift and go to state 23
    BOOL            shift and go to state 24
    CMBOOL          shift and go to state 25
    MBOOL           shift and go to state 26
    CVBOOL          shift and go to state 27
    VBOOL           shift and go to state 28
    CBOOL           shift and go to state 29

    program                        shift and go to state 1
    sentence_list                  shift and go to state 2
    single_sentence                shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    function                       shift and go to state 8
    type                           shift and go to state 9
    variable                       shift and go to state 11
    return_spec                    shift and go to state 14
    int                            shift and go to state 16
    bool                           shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> sentence_list .
    (2) sentence_list -> sentence_list . single_sentence
    (4) single_sentence -> . declaration NEW_LINE
    (5) single_sentence -> . assignment NEW_LINE
    (6) single_sentence -> . if NEW_LINE
    (7) single_sentence -> . for NEW_LINE
    (8) single_sentence -> . function NEW_LINE
    (9) declaration -> . type VARIABLE EQUAL expression
    (10) declaration -> . type VARIABLE EQUAL LEFT_FIGURE_BRACKET list_args RIGHT_FIGURE_BRACKET
    (11) assignment -> . variable ASSIGN expression
    (50) if -> . IF expression BEGINIF NEW_LINE sentence_list ENDIF
    (51) for -> . FOR VARIABLE EQUAL expression DOUBLE_DOT expression BEGINFOR NEW_LINE sentence_list ENDFOR
    (52) function -> . return_spec FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (53) function -> . return_spec FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (54) function -> . FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (55) function -> . FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (27) type -> . int
    (28) type -> . bool
    (26) variable -> . VARIABLE
    (56) return_spec -> . return_spec COMMA type VARIABLE
    (57) return_spec -> . type VARIABLE EQUAL
    (29) int -> . INT
    (30) int -> . CVINT
    (31) int -> . VINT
    (32) int -> . CMINT
    (33) int -> . MINT
    (34) int -> . CINT
    (35) bool -> . BOOL
    (36) bool -> . CMBOOL
    (37) bool -> . MBOOL
    (38) bool -> . CVBOOL
    (39) bool -> . VBOOL
    (40) bool -> . CBOOL

    $end            reduce using rule 1 (program -> sentence_list .)
    IF              shift and go to state 12
    FOR             shift and go to state 13
    FUNCTION        shift and go to state 15
    VARIABLE        shift and go to state 10
    INT             shift and go to state 18
    CVINT           shift and go to state 19
    VINT            shift and go to state 20
    CMINT           shift and go to state 21
    MINT            shift and go to state 22
    CINT            shift and go to state 23
    BOOL            shift and go to state 24
    CMBOOL          shift and go to state 25
    MBOOL           shift and go to state 26
    CVBOOL          shift and go to state 27
    VBOOL           shift and go to state 28
    CBOOL           shift and go to state 29

    single_sentence                shift and go to state 30
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    function                       shift and go to state 8
    type                           shift and go to state 9
    variable                       shift and go to state 11
    return_spec                    shift and go to state 14
    int                            shift and go to state 16
    bool                           shift and go to state 17

state 3

    (3) sentence_list -> single_sentence .

    IF              reduce using rule 3 (sentence_list -> single_sentence .)
    FOR             reduce using rule 3 (sentence_list -> single_sentence .)
    FUNCTION        reduce using rule 3 (sentence_list -> single_sentence .)
    VARIABLE        reduce using rule 3 (sentence_list -> single_sentence .)
    INT             reduce using rule 3 (sentence_list -> single_sentence .)
    CVINT           reduce using rule 3 (sentence_list -> single_sentence .)
    VINT            reduce using rule 3 (sentence_list -> single_sentence .)
    CMINT           reduce using rule 3 (sentence_list -> single_sentence .)
    MINT            reduce using rule 3 (sentence_list -> single_sentence .)
    CINT            reduce using rule 3 (sentence_list -> single_sentence .)
    BOOL            reduce using rule 3 (sentence_list -> single_sentence .)
    CMBOOL          reduce using rule 3 (sentence_list -> single_sentence .)
    MBOOL           reduce using rule 3 (sentence_list -> single_sentence .)
    CVBOOL          reduce using rule 3 (sentence_list -> single_sentence .)
    VBOOL           reduce using rule 3 (sentence_list -> single_sentence .)
    CBOOL           reduce using rule 3 (sentence_list -> single_sentence .)
    $end            reduce using rule 3 (sentence_list -> single_sentence .)
    ENDIF           reduce using rule 3 (sentence_list -> single_sentence .)
    END             reduce using rule 3 (sentence_list -> single_sentence .)
    ENDFOR          reduce using rule 3 (sentence_list -> single_sentence .)


state 4

    (4) single_sentence -> declaration . NEW_LINE

    NEW_LINE        shift and go to state 31


state 5

    (5) single_sentence -> assignment . NEW_LINE

    NEW_LINE        shift and go to state 32


state 6

    (6) single_sentence -> if . NEW_LINE

    NEW_LINE        shift and go to state 33


state 7

    (7) single_sentence -> for . NEW_LINE

    NEW_LINE        shift and go to state 34


state 8

    (8) single_sentence -> function . NEW_LINE

    NEW_LINE        shift and go to state 35


state 9

    (9) declaration -> type . VARIABLE EQUAL expression
    (10) declaration -> type . VARIABLE EQUAL LEFT_FIGURE_BRACKET list_args RIGHT_FIGURE_BRACKET
    (57) return_spec -> type . VARIABLE EQUAL

    VARIABLE        shift and go to state 36


state 10

    (26) variable -> VARIABLE .

    ASSIGN          reduce using rule 26 (variable -> VARIABLE .)
    BEGINIF         reduce using rule 26 (variable -> VARIABLE .)
    PLUS            reduce using rule 26 (variable -> VARIABLE .)
    MINUS           reduce using rule 26 (variable -> VARIABLE .)
    MATRIX_MUL      reduce using rule 26 (variable -> VARIABLE .)
    ELEMENTAL_MUL   reduce using rule 26 (variable -> VARIABLE .)
    LEFT_CYCLIC_SHIFT reduce using rule 26 (variable -> VARIABLE .)
    RIGHT_CYCLIC_SHIFT reduce using rule 26 (variable -> VARIABLE .)
    TRANSPOSITION   reduce using rule 26 (variable -> VARIABLE .)
    LESS            reduce using rule 26 (variable -> VARIABLE .)
    GREATER         reduce using rule 26 (variable -> VARIABLE .)
    AND             reduce using rule 26 (variable -> VARIABLE .)
    NEW_LINE        reduce using rule 26 (variable -> VARIABLE .)
    DOUBLE_DOT      reduce using rule 26 (variable -> VARIABLE .)
    COMMA           reduce using rule 26 (variable -> VARIABLE .)
    RIGHT_FIGURE_BRACKET reduce using rule 26 (variable -> VARIABLE .)
    BEGINFOR        reduce using rule 26 (variable -> VARIABLE .)
    RIGHT_BRACKET   reduce using rule 26 (variable -> VARIABLE .)


state 11

    (11) assignment -> variable . ASSIGN expression

    ASSIGN          shift and go to state 37


state 12

    (50) if -> IF . expression BEGINIF NEW_LINE sentence_list ENDIF
    (12) expression -> . math_expression
    (13) expression -> . variable
    (14) expression -> . constant
    (15) math_expression -> . expression PLUS expression
    (16) math_expression -> . expression MINUS expression
    (17) math_expression -> . expression MATRIX_MUL expression
    (18) math_expression -> . expression ELEMENTAL_MUL expression
    (19) math_expression -> . expression LEFT_CYCLIC_SHIFT
    (20) math_expression -> . expression RIGHT_CYCLIC_SHIFT
    (21) math_expression -> . expression TRANSPOSITION
    (22) math_expression -> . expression LESS expression
    (23) math_expression -> . expression GREATER expression
    (24) math_expression -> . NEGATIVE expression
    (25) math_expression -> . expression AND expression
    (26) variable -> . VARIABLE
    (41) constant -> . INT_BINARY
    (42) constant -> . INT_DECIMAL
    (43) constant -> . TRUE
    (44) constant -> . FALSE

    NEGATIVE        shift and go to state 42
    VARIABLE        shift and go to state 10
    INT_BINARY      shift and go to state 43
    INT_DECIMAL     shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 38
    math_expression                shift and go to state 39
    variable                       shift and go to state 40
    constant                       shift and go to state 41

state 13

    (51) for -> FOR . VARIABLE EQUAL expression DOUBLE_DOT expression BEGINFOR NEW_LINE sentence_list ENDFOR

    VARIABLE        shift and go to state 47


state 14

    (52) function -> return_spec . FUNCTION VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (53) function -> return_spec . FUNCTION VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (56) return_spec -> return_spec . COMMA type VARIABLE

    FUNCTION        shift and go to state 48
    COMMA           shift and go to state 49


state 15

    (54) function -> FUNCTION . VARIABLE LEFT_BRACKET parameters RIGHT_BRACKET BEGIN NEW_LINE sentence_list END
    (55) function -> FUNCTION . VARIABLE LEFT_BRACKET RIGHT_BRACKET BEGIN NEW_LINE sentence_list END

    VARIABLE        shift and go to state 50


state 16

    (27) type -> int .

    VARIABLE        reduce using rule 27 (type -> int .)


state 17

    (28) type -> bool .

    VARIABLE        reduce using rule 28 (type -> bool .)


state 18

    (29) int -> INT .

    VARIABLE        reduce using rule 29 (int -> INT .)


state 19

    (30) int -> CVINT .

    VARIABLE        reduce using rule 30 (int -> CVINT .)


state 20

    (31) int -> VINT .

    VARIABLE        reduce using rule 31 (int -> VINT .)


state 21

    (32) int -> CMINT .

    VARIABLE        reduce using rule 32 (int -> CMINT .)


state 22

    (33) int -> MINT .

    VARIABLE        reduce using rule 33 (int -> MINT .)


state 23

    (34) int -> CINT .

    VARIABLE        reduce using rule 34 (int -> CINT .)


state 24

    (35) bool -> BOOL .

    VARIABLE        reduce using rule 35 (bool -> BOOL .)


state 25

    (36) bool -> CMBOOL .

    VARIABLE        reduce using rule 36 (bool -> CMBOOL .)


state 26

    (37) bool -> MBOOL .

    VARIABLE        reduce using rule 37 (bool -> MBOOL .)


state 27

    (38) bool -> CVBOOL .

    VARIABLE        reduce using rule 38 (bool -> CVBOOL .)


state 28

    (39) bool -> VBOOL .

    VARIABLE        reduce using rule 39 (bool -> VBOOL .)


state 29

    (40) bool -> CBOOL .

    VARIABLE        reduce using rule 40 (bool -> CBOOL .)


state 30

    (2) sentence_list -> sentence_list single_sentence .

    IF              reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    FOR             reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    FUNCTION        reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    VARIABLE        reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    INT             reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    CVINT           reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    VINT            reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    CMINT           reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    MINT            reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    CINT            reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    BOOL            reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    CMBOOL          reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    MBOOL           reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    CVBOOL          reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    VBOOL           reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    CBOOL           reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    $end            reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    ENDIF           reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    END             reduce using rule 2 (sentence_list -> sentence_list single_sentence .)
    ENDFOR          reduce using rule 2 (sentence_list -> sentence_list single_sentence .)


state 31

    (4) single_sentence -> declaration NEW_LINE .

    IF              reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    FOR             reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    FUNCTION        reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    VARIABLE        reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    INT             reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    CVINT           reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    VINT            reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    CMINT           reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    MINT            reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    CINT            reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    BOOL            reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    CMBOOL          reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    MBOOL           reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    CVBOOL          reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    VBOOL           reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    CBOOL           reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    $end            reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    ENDIF           reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    END             reduce using rule 4 (single_sentence -> declaration NEW_LINE .)
    ENDFOR          reduce using rule 4 (single_sentence -> declaration NEW_LINE .)


state 32

    (5) single_sentence -> assignment NEW_LINE .

    IF              reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    FOR             reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    FUNCTION        reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    VARIABLE        reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    INT             reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    CVINT           reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    VINT            reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    CMINT           reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    MINT            reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    CINT            reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    BOOL            reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    CMBOOL          reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    MBOOL           reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    CVBOOL          reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    VBOOL           reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    CBOOL           reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    $end            reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    ENDIF           reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    END             reduce using rule 5 (single_sentence -> assignment NEW_LINE .)
    ENDFOR          reduce using rule 5 (single_sentence -> assignment NEW_LINE .)


state 33

    (6) single_sentence -> if NEW_LINE .

    IF              reduce using rule 6 (single_sentence -> if NEW_LINE .)
    FOR             reduce using rule 6 (single_sentence -> if NEW_LINE .)
    FUNCTION        reduce using rule 6 (single_sentence -> if NEW_LINE .)
    VARIABLE        reduce using rule 6 (single_sentence -> if NEW_LINE .)
    INT             reduce using rule 6 (single_sentence -> if NEW_LINE .)
    CVINT           reduce using rule 6 (single_sentence -> if NEW_LINE .)
    VINT            reduce using rule 6 (single_sentence -> if NEW_LINE .)
    CMINT           reduce using rule 6 (single_sentence -> if NEW_LINE .)
    MINT            reduce using rule 6 (single_sentence -> if NEW_LINE .)
    CINT            reduce using rule 6 (single_sentence -> if NEW_LINE .)
    BOOL            reduce using rule 6 (single_sentence -> if NEW_LINE .)
    CMBOOL          reduce using rule 6 (single_sentence -> if NEW_LINE .)
    MBOOL           reduce using rule 6 (single_sentence -> if NEW_LINE .)
    CVBOOL          reduce using rule 6 (single_sentence -> if NEW_LINE .)
    VBOOL           reduce using rule 6 (single_sentence -> if NEW_LINE .)
    CBOOL           reduce using rule 6 (single_sentence -> if NEW_LINE .)
    $end            reduce using rule 6 (single_sentence -> if NEW_LINE .)
    ENDIF           reduce using rule 6 (single_sentence -> if NEW_LINE .)
    END             reduce using rule 6 (single_sentence -> if NEW_LINE .)
    ENDFOR          reduce using rule 6 (single_sentence -> if NEW_LINE .)


state 34

    (7) single_sentence -> for NEW_LINE .

    IF              reduce using rule 7 (single_sentence -> for NEW_LINE .)
    FOR             reduce using rule 7 (single_sentence -> for NEW_LINE .)
    FUNCTION        reduce using rule 7 (single_sentence -> for NEW_LINE .)
    VARIABLE        reduce using rule 7 (single_sentence -> for NEW_LINE .)
    INT             reduce using rule 7 (single_sentence -> for NEW_LINE .)
    CVINT           reduce using rule 7 (single_sentence -> for NEW_LINE .)
    VINT            reduce using rule 7 (single_sentence -> for NEW_LINE .)
    CMINT           reduce using rule 7 (single_sentence -> for NEW_LINE .)
    MINT            reduce using rule 7 (single_sentence -> for NEW_LINE .)
    CINT            reduce using rule 7 (single_sentence -> for NEW_LINE .)
    BOOL            reduce using rule 7 (single_sentence -> for NEW_LINE .)
    CMBOOL          reduce using rule 7 (single_sentence -> for NEW_LINE .)
    MBOOL           reduce using rule 7 (single_sentence -> for NEW_LINE .)
    CVBOOL          reduce using rule 7 (single_sentence -> for NEW_LINE .)
    VBOOL           reduce using rule 7 (single_sentence -> for NEW_LINE .)
    CBOOL           reduce using rule 7 (single_sentence -> for NEW_LINE .)
    $end            reduce using rule 7 (single_sentence -> for NEW_LINE .)
    ENDIF           reduce using rule 7 (single_sentence -> for NEW_LINE .)
    END             reduce using rule 7 (single_sentence -> for NEW_LINE .)
    ENDFOR          reduce using rule 7 (single_sentence -> for NEW_LINE .)


state 35

    (8) single_sentence -> function NEW_LINE .
